Fix Latitude and Longitude + Add Geocoder

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,12 +22,12 @@
 
 <p>
   <strong>Latitude:</strong>
-  <%= @event.lat %>
+  <%= @event.latitude %>
 </p>
 
 <p>
   <strong>Longitude:</strong>
-  <%= @event.lng %>
+  <%= @event.longitude %>
 </p>
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
