--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -27,12 +27,12 @@
     <%= f.date_select :event_date %>
   </div>
   <div class="field">
-    <%= f.label :lat %><br>
-    <%= f.text_field :lat %>
+    <%= f.label :latitude %><br>
+    <%= f.text_field :latitude %>
   </div>
   <div class="field">
-    <%= f.label :lng %><br>
-    <%= f.text_field :lng %>
+    <%= f.label :longitude %><br>
+    <%= f.text_field :longitude %>
   </div>
   <div class="actions">
     <%= f.submit %>
