--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -26,8 +26,8 @@
         <td><%= image_tag event.image.url(:thumb) %></td>
         <td><%= event.address %></td>
         <td><%= event.event_date %></td>
-        <td><%= event.lat %></td>
-        <td><%= event.lng %></td>
+        <td><%= event.latitude %></td>
+        <td><%= event.longitude %></td>
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
