Feature list events

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -38,16 +38,10 @@
 
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+<%= link_to 'New Event', new_event_path %> |
+<%= link_to 'Users', users_path %><br>
 
-<h2>Import Events</h2>
-
-<%= form_tag import_events_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "Import" %>
-<% end %>
-
-<br>
+<h2>Google Maps</h2><br>
 
 <div style='width: 800px;'>
   <div id="gmaps" style='width: 800px; height: 400px;'></div>
