--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,11 +4,17 @@
 
 <p id="notice"><%= notice %></p>
 
+<br>
+<div style='width: 800px;'>
+  <div id="gmaps" style='width: 1400px; height: 400px;'></div>
+</div>
+
 <h1>Listing Events</h1>
 
 <table>
   <thead>
     <tr>
+      <th>User</th>
       <th>Name</th>
       <th>Image</th>
       <th>Address</th>
@@ -22,6 +28,13 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
+        <td>
+        <% if event.user.blank? %>
+          <%= p " " %>
+        <% else  %>
+          <%= event.user.first_and_last_name %>
+        <% end %>
+        </td>
         <td><%= event.name %></td>
         <td><%= image_tag event.image.url(:thumb) %></td>
         <td><%= event.address %></td>
@@ -38,14 +51,8 @@
 
 <br>
 
-<%= link_to 'New Event', new_event_path %> |
+<%= link_to 'New Event', new_event_path,{class: 'link-to-text-color'} %> |
 <%= link_to 'Users', users_path %><br>
-
-<h2>Google Maps</h2><br>
-
-<div style='width: 800px;'>
-  <div id="gmaps" style='width: 800px; height: 400px;'></div>
-</div>
 
 <script type="text/javascript">
   //google maps
