Add Bootstrap to project

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -39,7 +39,7 @@
     <%= f.text_field :longitude %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Update Event', :class => 'btn btn-default' %>
   </div>
 <% end %>
 
