--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_field :email %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Update User', :class => 'btn btn-default' %>
   </div>
 <% end %>
