--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -51,8 +51,8 @@
 
 <br>
 
-<%= link_to 'New Event', new_event_path,{class: 'link-to-text-color'} %> |
-<%= link_to 'Users', users_path %><br>
+<%= link_to 'New Event', new_event_path,{class: 'btn btn-default'} %> |
+<%= link_to 'Users', users_path,{class: 'btn btn-default'} %><br>
 
 <script type="text/javascript">
   //google maps
