--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -39,5 +39,5 @@
   <%= @event.longitude %>
 </p>
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Edit', edit_event_path(@event),{class: 'btn btn-default'} %> |
+<%= link_to 'Back', events_path,{class: 'btn btn-default'} %>
