--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,4 +19,4 @@
 <% end %>  
 
  <!--<%= link_to 'Edit', edit_user_path(@user) %> |-->
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path,{class: 'btn btn-default'} %>
