--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@event) do |f| %>
+<%= form_for @event, :html => {:class => "form-horizontal center"} do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -11,35 +11,51 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user %><br>
-    <%= f.collection_select(:user_id, User.all.order(fname: :asc), :id, :first_and_last_name, :include_blank => true, class: 'ui search dropdown' ) %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.label :user %><br>
+      <%= f.collection_select(:user_id, User.all.order(fname: :asc), :id, :first_and_last_name, :include_blank => true, class: 'ui search dropdown' ) %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.file_field :image %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.file_field :image %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.label :address %><br>
+      <%= f.text_field :address %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :event_date %><br>
-    <%= f.date_select :event_date %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.label :event_date %><br>
+      <%= f.date_select :event_date %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :latitude %><br>
-    <%= f.text_field :latitude %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.label :latitude %><br>
+      <%= f.text_field :latitude %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :longitude %><br>
-    <%= f.text_field :longitude %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.label :longitude %><br>
+      <%= f.text_field :longitude %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit 'Update Event', :class => 'btn btn-default' %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.submit 'Update Event', :class => 'btn btn-default' %>
+    </div>
   </div>
 <% end %>
 
