--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,12 @@
 <h1>Editing Event</h1>
 
-<%= render 'form' %>
+<div class="container-fluid">
+  <div class="col-md-8">
+    <%= render 'form' %>
+  </div>
+</div>
 
-<%= link_to 'Show', @event,{class: 'btn btn-default'} %> |
-<%= link_to 'Back', events_path,{class: 'btn btn-default'} %>
+<div class="col-md-8">
+  <%= link_to 'Show', @event,{class: 'btn btn-default'} %> |
+  <%= link_to 'Back', events_path,{class: 'btn btn-default'} %>
+</div>
