--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= form_for @user, :html => {:class => "form-horizontal center"} do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,19 +11,27 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :fname %><br>
-    <%= f.text_field :fname %>
+  <div class="form-group">
+    <div class="col-md-8">
+      <%= f.label :fname %><br>
+      <%= f.text_field :fname %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :lname %><br>
-    <%= f.text_field :lname %>
+  <div class="form-group">
+    <div class="col-md-8">    
+      <%= f.label :lname %><br>
+      <%= f.text_field :lname %>
+    </div>
+  </div>  
+  <div class="form-group">
+    <div class="col-md-8">    
+      <%= f.label :email %><br>
+      <%= f.text_field :email %>
+    </div>
+  </div>    
+  <div class="form-group">
+    <div class="col-md-8">    
+      <%= f.submit 'Update User', :class => 'btn btn-default' %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="actions">
-    <%= f.submit 'Update User', :class => 'btn btn-default' %>
-  </div>
-<% end %>
+  <% end %>
