--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,11 @@
 <h1>New User</h1>
 
-<%= render 'form' %>
+<div class="container-fluid">
+  <div class="col-md-8">
+    <%= render 'form' %>
+  </div>  
+</div>
 
-<%= link_to 'Back', users_path,{class: 'btn btn-default'} %>
+<div class="col-md-8">
+  <%= link_to 'Back', users_path,{class: 'btn btn-default'} %>
+</div>
