--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,34 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-8">
+  <p id="notice"><%= notice %></p>
+<div class="col-md-8">
 
 <% @events.each do |event| %>
+<div class="col-md-8">
   <h1><%= event.name %></h1>
+</div>
 
+<div class="col-md-8">
   <p>
     <%= image_tag event.image.url(:thumb) %>
   </p>
+</div>
 
+<div class="col-md-8">
   <p>
     <strong>When:</strong>
     <%= event.event_date %>
   </p>
-
+</div>
+  
+<div class="col-md-8">
   <p>
     <strong>Where:</strong>
     <%= event.address %>
   </p>
+</div>  
 <% end %>  
 
- <!--<%= link_to 'Edit', edit_user_path(@user) %> |-->
-<%= link_to 'Back', users_path,{class: 'btn btn-default'} %>
+<div class="col-md-8">
+  <!--<%= link_to 'Edit', edit_user_path(@user) %> |-->
+  <%= link_to 'Back', users_path,{class: 'btn btn-default'} %>
+</div>
