--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,58 +2,60 @@
 <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/infobox/1.1.9/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
-<p id="notice"><%= notice %></p>
+<div class="col-md-12">
+  <p id="notice"><%= notice %></p>
 
-<br>
-<div style='width: 800px;'>
-  <div id="gmaps" style='width: 1400px; height: 400px;'></div>
+  <br>
+  <div style='width: 800px;'>
+    <div id="gmaps" style='width: 1400px; height: 400px;'></div>
+  </div>
+
+  <h1>Listing Events</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>User</th>
+          <th>Name</th>
+          <th>Image</th>
+          <th>Address</th>
+          <th>Event date</th>
+          <th>Latitude</th>
+          <th>Longitude</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @events.each do |event| %>
+          <tr>
+            <td>
+            <% if event.user.blank? %>
+              <%= p " " %>
+            <% else  %>
+              <%= event.user.first_and_last_name %>
+            <% end %>
+            </td>
+            <td><%= event.name %></td>
+            <td><%= image_tag event.image.url(:thumb) %></td>
+            <td><%= event.address %></td>
+            <td><%= event.event_date %></td>
+            <td><%= event.latitude %></td>
+            <td><%= event.longitude %></td>
+            <td><%= link_to 'Show', event %></td>
+            <td><%= link_to 'Edit', edit_event_path(event) %></td>
+            <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 </div>
 
-<h1>Listing Events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Name</th>
-      <th>Image</th>
-      <th>Address</th>
-      <th>Event date</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td>
-        <% if event.user.blank? %>
-          <%= p " " %>
-        <% else  %>
-          <%= event.user.first_and_last_name %>
-        <% end %>
-        </td>
-        <td><%= event.name %></td>
-        <td><%= image_tag event.image.url(:thumb) %></td>
-        <td><%= event.address %></td>
-        <td><%= event.event_date %></td>
-        <td><%= event.latitude %></td>
-        <td><%= event.longitude %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Event', new_event_path,{class: 'btn btn-default'} %> |
-<%= link_to 'Users', users_path,{class: 'btn btn-default'} %><br>
-
+<div class="col-md-4">
+  <br>
+  <%= link_to 'New Event', new_event_path,{class: 'btn btn-default'} %> |
+  <%= link_to 'Users', users_path,{class: 'btn btn-default'} %>
+</div>
+  
 <script type="text/javascript">
   //google maps
   handler = Gmaps.build('Google',
