--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Editing User</h1>
+<div class="col-md-8">
+  <h1>Editing User</h1>
+</div>  
 
 <div class="container-fluid">
   <div class="col-md-8">
