Fix index/show when displays event.user, now using content_tag

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,11 +5,7 @@
 <div class="col-md-8">
   <p>
     <strong>User:</strong>
-    <% if @event.user.blank? %>
-      <%= p " " %>
-    <% else  %>
-      <%= @event.user.first_and_last_name %>
-    <% end %>
+    <%= @event.user.first_and_last_name if @event.user.present? %>
   </p>
 </div>
 
