--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -28,13 +28,7 @@
       <tbody>
         <% @events.each do |event| %>
           <tr>
-            <td>
-            <% if event.user.blank? %>
-              <%= p " " %>
-            <% else  %>
-              <%= event.user.first_and_last_name %>
-            <% end %>
-            </td>
+            <%= content_tag :td, event.user.first_and_last_name if event.user.present? %>
             <td><%= event.name %></td>
             <td><%= image_tag event.image.url(:thumb) %></td>
             <td><%= event.address %></td>
