--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -28,7 +28,7 @@
       <tbody>
         <% @events.each do |event| %>
           <tr>
-            <%= content_tag :td, event.user.first_and_last_name if event.user.present? %>
+            <td><%= event.user.first_and_last_name if event.user.present? %></td>
             <td><%= event.name %></td>
             <td><%= image_tag event.image.url(:thumb) %></td>
             <td><%= event.address %></td>
