--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -25,6 +25,7 @@
   </div>
   <div class="form-group">
     <div class="col-md-8">
+      <%= f.label :image %><br>
       <%= f.file_field :image %>
     </div>
   </div>
